Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83187

VirtualKeyboard does not respect disable-layouts when building statically

    XMLWordPrintable

Details

    • a50db98b23526737a4f7680d4e02ccd455309699 (qt/qtvirtualkeyboard/5.15)

    Description

      Setting disable-layouts flag is not reflected in static build.

      plugins/platforminputcontexts/libqtvirtualkeyboardplugin.a(plugin.obj): In function `QVirtualKeyboardPlugin::create(QString const&, QStringList const&)':
      qt5/qtvirtualkeyboard/src/plugin/plugin.cpp:58: undefined reference to `qInitResources_qmake_virtualkeyboard_layouts()'
      qt5/qtvirtualkeyboard/src/plugin/plugin.cpp:60: undefined reference to `qInitResources_virtualkeyboard_default_style()'
      qt5/qtvirtualkeyboard/src/plugin/plugin.cpp:61: undefined reference to `qInitResources_virtualkeyboard_retro_style()'

      Please see qtvirtualkeyboard\src\plugin\plugin.cpp

      Attachments

        For Gerrit Dashboard: QTBUG-83187
        # Subject Branch Project Status CR V

        Activity

          People

            mitch_curtis Mitch Curtis
            ravila Risto Avila
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes