Fix static build when using disable-layouts and no-builtin-style

When building the keyboard statically with CONFIG+=disable-layouts and
CONFIG+=no-builtin-style, there would be linker errors due to
Q_INIT_RESOURCE being defined unconditionally. Put these lines behind

Change-Id: Id181cf078237abb54893675c9efaf06b4860678d
Fixes: QTBUG-83187
Reviewed-by: Risto Avila <risto.avila@qt.io>
Reviewed-by: Andy Shaw <andy.shaw@qt.io>